<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caverna Scoring Pad</string>
    <string name="wealth_tab">Wealth</string>
    <string name="family_tab">Family</string>
    <string name="cave_tab">Cave</string>
    <string name="bonus_tab">Bonus</string>
    <string name="dwarfs">Dwarfs</string>
    <string name="dogs">Dogs</string>
    <string name="sheep">Sheep</string>
    <string name="donkeys">Donkeys</string>
    <string name="boars">Wild boars</string>
    <string name="cattle">Cattle</string>
    <string name="grain">Grain</string>
    <string name="vegetable">Vegetable</string>
    <string name="rubies">Rubies</string>
    <string name="gold">Gold</string>
    <string name="begging_markers">Begging Markers</string>
    <string name="small_pastures">Small Pastures</string>
    <string name="large_pastures">Large Pastures</string>
    <string name="ore_mines">Ore Mines</string>
    <string name="ruby_mines">Ruby Mines</string>
    <string name="unused_tiles">Unused Space</string>
    <string name="dwellings">Dwellings</string>
    <string name="stone">Stone</string>
    <string name="ore">Ore</string>
    <string name="score">Score</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_player_score">Score</string>
    <string name="title_activity_game">Scoring Pad</string>
    <string name="button_new_game">New Scoring Pad</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_players">Players</string>
    <string name="count">count</string>
    <string name="player">Player</string>
    <string name="count_text">%1$s: %2$d</string>
    <string name="score_sheet_title">%1$d %2$s</string>

</resources>
