<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:caverna="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="ch.quazz.caverna.ui.WealthFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/dogs"
                caverna:icon="@drawable/ruby" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/sheep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/sheep"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/donkeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/donkeys"
                caverna:icon="@drawable/stone" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/boars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/boars"
                caverna:icon="@drawable/wood" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/cattle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/cattle"
                caverna:icon="@drawable/ore" />

            <include layout="@layout/separator" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/grain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/grain"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/vegetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/vegetable"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/rubies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/rubies"
                caverna:icon="@drawable/ruby" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="30"
                caverna:label="@string/gold"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/begging_markers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="20"
                caverna:label="@string/begging_markers" />

            <include layout="@layout/separator" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/small_pastures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="12"
                caverna:label="@string/small_pastures"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/large_pastures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="6"
                caverna:label="@string/large_pastures" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/ore_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="5"
                caverna:label="@string/ore_mines"
                caverna:icon="@drawable/ore" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/ruby_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="10"
                caverna:label="@string/ruby_mines"
                caverna:icon="@drawable/ore" />

            <include layout="@layout/separator" />

            <ch.quazz.caverna.widget.CountingInput
                android:id="@+id/unused_tiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                caverna:min="0"
                caverna:max="22"
                caverna:label="@string/unused_tiles"
                caverna:icon="@drawable/ore" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
